resolve xslt-conref when filling book cache to support key-defs by xslt-conref (currently only with @xcr:stage = 0)